tests/snapshots/miners/cpu_mining/bad_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - miners
    - cpu-mining
    - foo
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Invalid value for: query parameter action (Invalid miner action: foo: foo)
