tests/snapshots/miners/cpu_mining/no_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - miners
    - cpu-mining
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <ACTION>

Usage: kermit miners cpu-mining <ACTION>

For more information, try '--help'.
