tests/snapshots/miners/cpu_mining/start_mining.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - miners
    - cpu-mining
    - start-mining
---
success: true
exit_code: 0
----- stdout -----
true

----- stderr -----
