tests/snapshots/miners/cpu_mining/stop_mining.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - miners
    - cpu-mining
    - stop-mining
---
success: true
exit_code: 0
----- stdout -----
true

----- stderr -----
